syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Project.IdentityService.Protos";
package profile;



service ProfileService  {
  rpc CreateProfile (ProfileCreateRequest) returns (ProfileResponse);
  rpc CheckEmail (CheckEmailRequest) returns (ProfileResponse);
}
message ProfileCreateRequest  {
  string UserID= 1;
  string FirstName = 2;
  string LastName = 3;
  google.protobuf.Timestamp DateOfBirth = 4;
  bool Gender = 5;
  string Email = 6;
}
message CheckEmailRequest  {
  string Email = 1;
}
message ProfileResponse  {
  bool isSuccess = 1;
  string UserID = 2;
}